--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,11 +1,29 @@
 body {
   font-family: Helvetica,Tahoma;
+  background: #E93D17;
 }
 
 *,
 *:before,
 *:after {
   box-sizing: border-box;
+}
+.logo.is-simple{
+  position: fixed;
+  top: 30px;
+  left: 30px;
+  color: #fff;
+  font-size: 13px;
+  font-weight: 100;
+  cursor: pointer;
+  will-change: transform; 
+  transition: 100ms all ease-in-out;
+  text-decoration: none
+}
+.logo.is-simple:hover{
+  color: #fff;
+  transform: scale(1.2);
+
 }
 
 .all {
@@ -16,26 +34,41 @@ body {
 }
 
 .item {
-  display: inline-block;
-  float: left;
-  width: 33.3333%;
-  height: 300px;
-  padding: 20px;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+  margin-bottom: 100px;
 }
 
 .item__inner {
   position: relative;
   width: 100%;
   height: 100%;
-  background: rgba(29, 164, 226, 0);
+  background: #E93D17;
+  border: 2px #fff solid;
   line-height: 260px;
   text-align: center;
-  color: #777;
+  color: #fff;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
 }
-
+.title {
+  font-size: 40px;
+  text-transform: capitalize;
+  font-weight: 100;
+  color: #FFFFFF;
+  transform: scale(1);
+  text-align: center;
+  transition: 0.3s all ease-in-out;
+}
+.title.big{
+  color: #FFFFFF;
+  transform: scale(1.2);
+}
 @media screen and (max-width: 800px) {
   .item {
-    width: 50%;
   }
 }
