--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,6 +1,6 @@
 body {
-  font-family: Helvetica,Tahoma;
   background: #E93D17;
+  font-family: Helvetica,Tahoma;
 }
 
 *,
@@ -8,18 +8,20 @@ body {
 *:after {
   box-sizing: border-box;
 }
+
 .logo.is-simple{
-  position: fixed;
-  top: 30px;
-  left: 30px;
   color: #fff;
-  font-size: 13px;
-  font-weight: 100;
   cursor: pointer;
-  will-change: transform; 
+  font-weight: 100;
+  font-size: 13px;
+  left: 30px;
+  position: fixed;
+  text-decoration: none;
+  top: 30px;
   transition: 100ms all ease-in-out;
-  text-decoration: none
+  will-change: transform; 
 }
+
 .logo.is-simple:hover{
   color: #fff;
   transform: scale(1.2);
@@ -27,48 +29,46 @@ body {
 }
 
 .all {
-  width: 1000px;
-  max-width: 98%;
   margin: 10vh auto 0 auto;
+  max-width: 98%;
   overflow: hidden;
+  width: 1000px;
 }
 
 .item {
-  width: 200px;
   height: 200px;
   margin: 0 auto;
   margin-bottom: 100px;
+  width: 200px;
 }
 
 .item__inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
+  align-items: center;
   background: #E93D17;
   border: 2px #fff solid;
-  line-height: 260px;
-  text-align: center;
+  border-radius: 10px;
   color: #fff;
   cursor: pointer;
   display: flex;
-  align-items: center;
+  height: 100%;
   justify-content: center;
-  border-radius: 10px;
-}
-.title {
-  font-size: 40px;
-  text-transform: capitalize;
-  font-weight: 100;
-  color: #FFFFFF;
-  transform: scale(1);
+  line-height: 260px;
+  position: relative;
   text-align: center;
+  width: 100%;
+}
+
+.title {
+  color: #FFFFFF;
+  font-size: 40px;
+  font-weight: 100;
+  text-align: center;
+  text-transform: capitalize;
+  transform: scale(1);
   transition: 0.3s all ease-in-out;
 }
+
 .title.big{
   color: #FFFFFF;
   transform: scale(1.2);
-}
-@media screen and (max-width: 800px) {
-  .item {
-  }
 }
